--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
           go-version: 1.19
 
       - name: Format
-        run: if [ "$(make fmt | wc -l)" -gt 0 ]; then exit 1; fi
+        run: if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then exit 1; fi
       - name: Build
         run: make build
 
